migrated image resources to the imgur so that other users can see them as well

--- a/Personal-Webpage.css
+++ b/Personal-Webpage.css
@@ -117,7 +117,7 @@ input, select {
 
 
       body{
-        background: url('./resources/OldWell.JPG') no-repeat center center fixed; 
+        background: url('http://i.imgur.com/fp65HgS.jpg') no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
