--- a/Personal-Webpage.css
+++ b/Personal-Webpage.css
@@ -150,6 +150,16 @@ input, select {
         margin: 0px;
       }
 
+      .projectLinks a{
+
+        color: white;
+        font-size: 26px;
+        text-decoration: none;
+
+      }
+
+
+
       nav {
 
         width: 100%;
@@ -165,7 +175,7 @@ input, select {
 
         margin: 0;
 
-        padding:0;
+        padding: 40px;
 
 
 /*        padding: 0; }   */
@@ -175,11 +185,13 @@ input, select {
 
        float: left;  
 
-       width: 33%;
+       width: 50%;
 
         }
 
       nav ul li a {
+
+        color: black;
 
         border-left-style: solid;
         border-right-style: solid;
